--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.0.5",
     "@sanity/client": "^6.7.0",
     "@sanity/image-url": "^1.0.2",
     "astro": "^4.0.6",
