--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,5 +7,5 @@
     }],
     "background_color": "#ffffff",
     "theme_color": "#ffffff",
-    "display": "fullscreen"
+    "display": "standalone"
 }
